# kana

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
benches/: benchmarks.rs
docs/architecture/: adr-001-direct-statevector-simulation.md  adr-002-no-cloning-type-system.md  adr-003-eigenvalue-computation.md  overview.md
docs/development/: dependency-watch.md  integration-guide.md  roadmap.md  threat-model.md
docs/guides/: testing.md
examples/: algorithms.rs  basic_quantum.rs  noise_simulation.rs  safe_builder.rs  time_evolution.rs
scripts/: bench-history.sh
src/: ai.rs  bridge.rs  circuit.rs  dynamics.rs  entanglement.rs  error.rs  lib.rs  logging.rs  operator.rs  parallel.rs  safe.rs  state.rs
tests/: integration.rs
